# imbuelight-stair-controller

./: .gitignore  README.md
firmware/: readme.md
firmware/imbuelight_stair_controller_fw/: CMakeLists.txt  flash.jlink  reset.jlink
firmware/imbuelight_stair_controller_fw/jlink/: erase.jlink  flash.jlink  reset.jlink
firmware/imbuelight_stair_controller_fw/src/: config.h  io_exp.c  io_exp.h  main.c  my_i2c.c  my_i2c.h  pwm.c  pwm.h  pwm.pio  pwm_pio.c  pwm_pio.h  server_common.c  temp_sensor.gatt  utils.c  utils.h
firmware/imbuelight_stair_controller_fw/src/oled/: ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  ssd1306_fonts.h
firmware/imbuelight_stair_controller_fw/src/rtt/Config/: SEGGER_RTT_Conf.h
firmware/imbuelight_stair_controller_fw/src/rtt/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
firmware/imbuelight_stair_controller_fw/src/rtt/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
firmware/imbuelight_stair_controller_fw/src/rtt/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
hardware/Production/Move controller ver 1.0/: Project Outputs for imbuelight_move_detection_ver_1.0.rar
hardware/Production/ver 1.0/: Project Outputs for imbuelight_stair_controler_ver_1.0.rar
hardware/imbuelight_move_detection_ver_1.0/: imbuelight_move_detection — panel.PcbDoc  imbuelight_move_detection.PcbDoc  imbuelight_move_detection.PcbDoc.htm  imbuelight_move_detection.SchDoc  imbuelight_move_detection_ver_1.0.PrjPcb  imbuelight_move_detection_ver_1.0.PrjPcbStructure  imbuelight_move_detection_ver_2.0.OutJob  imbuelight_move_detection_ver_2.0.PrjPcb
hardware/imbuelight_move_detection_ver_1.0/Project Outputs for imbuelight_move_detection_ver_1.0/: Design Rule Check - imbuelight_move_detection.drc  Design Rule Check - imbuelight_move_detection.html  Status Report.Txt  imbuelight_move_detection — panel-RoundHoles.TXT  imbuelight_move_detection — panel-SlotHoles.TXT  imbuelight_move_detection — panel-macro.APR_LIB  imbuelight_move_detection — panel.DRR  imbuelight_move_detection — panel.EXTREP  imbuelight_move_detection — panel.GBL  imbuelight_move_detection — panel.GBO  imbuelight_move_detection — panel.GBP  imbuelight_move_detection — panel.GBS  imbuelight_move_detection — panel.GTL  imbuelight_move_detection — panel.GTO  imbuelight_move_detection — panel.GTP  imbuelight_move_detection — panel.GTS  imbuelight_move_detection — panel.LDP  imbuelight_move_detection — panel.REP  (+2 more)
hardware/imbuelight_stair_controler_ver_1.0/: Top.SchDoc  i2c_devices.Harness  i2c_devices.SchDoc  imbuelight_stair_controler_ver_1.0.OutJob  imbuelight_stair_controler_ver_1.0.PrjPcb  imbuelight_stair_controler_ver_1.0.PrjPcbStructure  imbuelight_stair_controller.txt  in_channel.SchDoc  microcontroller.SchDoc  oled.Harness  oled.SchDoc  others.SchDoc  power.SchDoc  pwm_channel.SchDoc
(+60 files in other folders)
